cleaned up and consolidated css

--- a/G2/index.html
+++ b/G2/index.html
@@ -4,7 +4,6 @@
 	<meta charset="utf-8">
 	<title>HEMA website</title>
 	<link rel="stylesheet" href="style/base.css">
-	<link rel="stylesheet" href="style/positioning.css">
 </head>
 <body>
 	<div id="wrapper">
@@ -41,7 +40,9 @@
 		</nav>
 
 		<main>
-			This is some sample text. Go HEMA!
+			<div id="imgplaceholder">
+				Imagine an exciting picture here!
+			</div>
 		</main>
 
 		<!--
