updated navbar style, added placeholder for splash image in index.

--- a/G2/index.html
+++ b/G2/index.html
@@ -12,30 +12,12 @@
 		</header>
 
 		<nav>
-			<!-- Links as list -->
-
 			<div id="navbar">
 				<ul>
-					<li><a href="">About</a></li><li
+					<li><a href="">About Us</a></li><li
 					><a href="">HEMA</a></li><li
-					><a href="">home</a></li>
+					><a href="" class="active">home</a></li>
 				</ul>
-
-				<!-- links as table -->
-				<!--
-
-				<table>
-					<td>
-						<tr colspan = 3></tr>
-					<td>
-						<tr><a href="">About</a></tr>
-						<tr><a href="">Hema</a></tr>
-						<tr><a href="">Home</a></tr>
-					</td>
-				</table>
-
-				-->
-
 			</div>
 		</nav>
 
@@ -45,23 +27,9 @@
 			</div>
 		</main>
 
-		<!--
-		
-		<main>
-			<div class="left">
-				<ul>
-					<li>style 1</li>
-					<li>style 2</li>
-					<li>style 3</li>
-				</ul>
-			</div>
-			<div class="right">
-				<p>Facts & About</p>
-			</div>
-		</main>
 		<footer>
-			&copy 2017 some students
-		</footer> -->
+			&copy; 2017 some students
+		</footer>
 	</div>
 </body>
 </html>
