--- a/G2/index.html
+++ b/G2/index.html
@@ -6,10 +6,8 @@
 	<link rel="stylesheet" href="style/base.css">
 </head>
 <body>
-	<div id="wrapper">
-		<header>
-		<h1>HEMA website</h1>
-		</header>
+	<header>
+		<h1>HEMA 	website</h1>
 
 		<nav>
 			<div id="navbar">
@@ -20,16 +18,24 @@
 				</ul>
 			</div>
 		</nav>
-
-		<main>
+	</header>
+	
+	<main>	
+		<div id="wrapper">
 			<div id="imgplaceholder">
 				Imagine an exciting picture here!
 			</div>
-		</main>
-
-		<footer>
-			&copy; 2017 some students
-		</footer>
-	</div>
+			<div class="left">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+			<div class="right">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+		</div>	
+	</main>
+	
+	<footer>
+		&copy; 2017 some students
+	</footer>
 </body>
 </html>
