minor reorganization in <main>, added footercontent div for style purposes.

--- a/G2/index.html
+++ b/G2/index.html
@@ -35,7 +35,9 @@
 	</main>
 	
 	<footer>
-		&copy; 2017 some students
+		<div id="footercontent">
+			&copy; 2017 some students
+		</div>
 	</footer>
 </body>
 </html>
