--- a/G2/index.html
+++ b/G2/index.html
@@ -6,19 +6,36 @@
 	<link rel="stylesheet" href="style/base.css">
 </head>
 <body>
-	<header>
-		<h1>HEMA 	website</h1>
-
-		<nav>
+	<div id="header">
+		<h1>HEMA</h1>
+        <img src="" alt="This is where the logo will go." />
+		
 			<div id="navbar">
 				<ul>
-					<li><a href="">About Us</a></li><li
-					><a href="">HEMA</a></li><li
-					><a href="" class="active">home</a></li>
-				</ul>
+                    <li><a href="#">Home</a></li>
+                  <li class="dropdown">
+                        <a href="#" id="button1" class="button">HEMA </a>
+                        <div id="menu" class="menu">
+                          <a href="#">About HEMA</a>
+                          <a href="#">Styles</a>
+                          <a href="#">HEMA in BC</a>
+                        </div>
+                      <li class="dropdown">
+                        <a href="#" id="button2" class="button">About Us</a>
+                        <div id="menu2" class="menu">
+                          <a href="#">Contact Us</a>
+                            <a href="#">Meet the Team</a>
+                        </div>
+    
+                  </li>
+                </ul>
 			</div>
-		</nav>
-	</header>
+        <div id="login">
+         <a href="#">Login/Signup</a>
+        </div>
+       
+		
+	</div>
 	
 	<main>	
 		<div id="wrapper">
@@ -35,7 +52,8 @@
 	</main>
 	
 	<footer>
-		&copy; 2017 some students
+		<p>&copy; 2017 some students
+        <a href="#" >Site Map</a> </p>
 	</footer>
 </body>
 </html>
