updating index and base css

--- a/G2/index.html
+++ b/G2/index.html
@@ -51,15 +51,11 @@
 		</div>	
 	</main>
 	
-	<footer>
-<<<<<<< HEAD
-		<p>&copy; 2017 some students
-        <a href="#" >Site Map</a> </p>
-=======
-		<div id="footercontent">
-			&copy; 2017 some students
-		</div>
->>>>>>> 171f68a80f422f11604774583db286d728864c1a
-	</footer>
+	<div id="footer">
+        <div id="footercontent"> 
+            &copy; 2017 some students 
+            <a href="#" >Site Map</a>
+        </div>
+   </div>
 </body>
 </html>
