created forms for login and register. cleaned up some code in base.css

--- a/G2/index.html
+++ b/G2/index.html
@@ -34,7 +34,7 @@
 		</div>
 		
 		<div id="login">
-			<a href="#">Login/Signup</a>
+			<a href="login/login.html">Login/Signup</a>
 		</div>
 		    
 	</div>
