--- a/G2/login/login.html
+++ b/G2/login/login.html
@@ -43,20 +43,78 @@
 	<main>
 		<div id="wrapper">
 			<div class="left">
-				<div id="loginform">
-					Log in
+				<div class="loginform">
 					<form action="">
-						<label for="email">email address</label><input type="email" name="email" id="email"><br>
-						<label for="password">password</label><input type="text" name="password" id="password"><br>
+						<table>
+							<tr>
+								<td class="tabletitle" colspan="2">
+									Log in
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<label for="logemail">email address </label>
+								</td>
+								<td>
+									<input type="email" name="logemail" id="logemail">
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<label for="logpassword">password </label>
+								</td>
+								<td>
+									<input type="text" name="logpassword" id="logpassword">
+								</td>
+							</tr>
+							<tr>
+								<td class="loginsubmit" colspan="2">
+									<input type="submit" value="submit">
+								</td>
+							</tr>
+						</table>
 					</form>
 				</div>
 			</div>
 			<div class="right">
-				<div id="registerform">
-					Sign up
+				<div class="loginform">
 					<form action="">
-						<label for="email">email address</label><input type="email" name="email" id="email"><br>
-						<label for="password">password</label><input type="text" name="password" id="password"><br>
+						<table>
+							<tr>
+								<td class="tabletitle" colspan="2">
+									Sign up
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<label for="regemail">email address </label>
+								</td>
+								<td>
+									<input type="email" name="regemail" id="regemail">
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<label for="confemail">confirm email </label>
+								</td>
+								<td>
+									<input type="text"" name="confemail" id="confemail">
+								</td>
+							</tr>							
+							<tr>
+								<td>
+									<label for="regpassword">password </label>
+								</td>
+								<td>
+									<input type="text" name="regpassword" id="regpassword">
+								</td>
+							</tr>
+							<tr>
+								<td class="loginsubmit" colspan="2">
+									<input type="submit" value="submit">
+								</td>
+							</tr>
+						</table>
 					</form>
 				</div>
 			</div>
