the meet the team page and contact page were made in to a single page.

--- a/G2/index.html
+++ b/G2/index.html
@@ -23,13 +23,8 @@
 					</div>
 				</li>
 				
-				<li class="dropdown">
-					<a href="#" id="button2" class="button">About Us</a>
-					<div id="menu2" class="menu">
-						<a href="#">Contact Us</a>
-						<a href="#">Meet the Team</a>
-					</div>
-				</li>
+                <li><a href="#">About Us</a></li>
+				
 			</ul>
 		</div>
 		
