--- a/G2/login/login.html
+++ b/G2/login/login.html
@@ -4,7 +4,6 @@
 	<meta charset="utf-8">
 	<title>HEMA - Login</title>
 	<link rel="stylesheet" href="../style/base.css">
-	<link rel="stylesheet" href="../style/login.css">
 </head>
 <body>
 <div id="header">
@@ -47,7 +46,7 @@
 					<form action="">
 						<table>
 							<tr>
-								<td class="tabletitle" colspan="2">
+								<td class="logintitle" colspan="2">
 									Log in
 								</td>
 							</tr>
@@ -81,7 +80,7 @@
 					<form action="">
 						<table>
 							<tr>
-								<td class="tabletitle" colspan="2">
+								<td class="logintitle" colspan="2">
 									Sign up
 								</td>
 							</tr>
