--- a/G2/login/login.html
+++ b/G2/login/login.html
@@ -6,11 +6,11 @@
 	<link rel="stylesheet" href="../style/base.css">
 </head>
 <body>
-<div id="header">
+	<header>
 		<h1>HEMA</h1>
 		<img src="" alt="This is where the logo will go." />
 		
-		<div id="navbar">
+		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
 				
@@ -31,17 +31,17 @@
 					</div>
 				</li>
 			</ul>
-		</div>
+		</nav>
 		
 		<div id="login">
 			<a href="#">Login/Signup</a>
 		</div>
 		    
-	</div>
+	</header>
 	
 	<main>
 		<div id="wrapper">
-			<div class="left">
+			<div id="loginpanel">
 				<div class="loginform">
 					<form action="">
 						<table>
@@ -75,7 +75,7 @@
 					</form>
 				</div>
 			</div>
-			<div class="right">
+			<div id="registerpanel">
 				<div class="loginform">
 					<form action="">
 						<table>
@@ -120,11 +120,11 @@
 		</div>	
 	</main>
 	
-	<div id="footer">
+	<footer>
 		<div id="footercontent"> 
 			&copy; 2017 some students 
 			<a href="#" >Site Map</a>
 		</div>
-	</div>
+	</footer>
 </body>
 </html>
