--- a/G2/login/login.html
+++ b/G2/login/login.html
@@ -12,7 +12,7 @@
 		
 		<nav>
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li><a href="../index.html">Home</a></li>
 				
 				<li class="dropdown">
 					<a href="#" id="button1" class="button">HEMA </a>
