additional changes to login, changed style of login button

--- a/G2/login/login.html
+++ b/G2/login/login.html
@@ -43,7 +43,7 @@
 		<div id="wrapper">
 			<div id="loginpanel">
 				<div class="loginform">
-					<form action="">
+					<form action="http://webdevfoundations.net/scripts/formdemo.asp">
 						<table>
 							<tr>
 								<td class="logintitle" colspan="2">
@@ -77,7 +77,7 @@
 			</div>
 			<div id="registerpanel">
 				<div class="loginform">
-					<form action="">
+					<form action="http://webdevfoundations.net/scripts/formdemo.asp">
 						<table>
 							<tr>
 								<td class="logintitle" colspan="2">
