--- a/G2/aboutus/about_us.html
+++ b/G2/aboutus/about_us.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>About Us</title>
-	<link rel="stylesheet" href="style/base.css">
+	<link rel="stylesheet" href="../style/base.css">
 </head>
 <body>
 	<div id="header">
