--- a/G2/aboutus/about_us.html
+++ b/G2/aboutus/about_us.html
@@ -6,13 +6,13 @@
 	<link rel="stylesheet" href="../style/base.css">
 </head>
 <body>
-	<div id="header">
+	<header>
 		<h1>About Us</h1>
-        <img src="" alt="This is where the logo will go." />
+    <img src="" alt="This is where the logo will go." />
 		
-			<div id="navbar">
+			<nav>
 				<ul>
-                    <li><a href="#">Home</a></li>
+        	<li><a href="#">Home</a></li>
                   <li class="dropdown">
                         <a href="#" id="button1" class="button">HEMA </a>
                         <div id="menu" class="menu">
@@ -29,13 +29,13 @@
     
                   </li>
                 </ul>
-			</div>
+			</nav>
         <div id="login">
          <a href="#">Login/Signup</a>
         </div>
        
 		
-	</div>
+	</header>
 	
 	<main>	
 		<div id="wrapper">
@@ -107,11 +107,11 @@
 		
 	</main>
 	
-	<div id="footer">
+	<footer>
         <div id="footercontent"> 
             &copy; 2017 some students 
             <a href="#" >Site Map</a>
         </div>
-   </div>
+   </footer>
 </body>
 </html>
