fixed all the links and added EMPTY hemainbc, abouthema page

--- a/G2/aboutus/aboutus.html
+++ b/G2/aboutus/aboutus.html
@@ -12,26 +12,20 @@
     
 		<nav>
 			<ul>
-        <li><a href="#">Home</a></li>
-        <li class="dropdown">
-          <a href="#" id="button1" class="button">HEMA </a>
-          <div id="menu" class="menu">
-            <a href="#">About HEMA</a>
-            <a href="#">Styles</a>
-            <a href="#">HEMA in BC</a>
-          </div>
-        </li>
-        <li class="dropdown">
-          <a href="#" id="button2" class="button">About Us</a>
-          <div id="menu2" class="menu">
-            <a href="#">Contact Us</a>
-            <a href="#">Meet the Team</a>
-          </div>    
-        </li>
-      </ul>
+                <li><a href="../index.html">Home</a></li>
+                <li class="dropdown">
+                  <a href="#" class="button">HEMA </a>
+                  <div class="menu">
+                    <a href="../hema/abouthema/abouthema.html">About HEMA</a>
+				    <a href="../hema/hemastyles/hemastyles.html">HEMA Styles</a>
+				    <a href="../hema/hemainbc/hemainbc.html">HEMA in BC</a>
+                  </div>
+                </li>
+                <li><a href="#">About Us</a></li>
+            </ul>
 		</nav>
     <div id="login">
-      <a href="#">Login/Signup</a>
+      <a href="../login/loginorsignup.html">Login/Signup</a>
     </div>
 	</header>
 	
@@ -104,7 +98,7 @@
 	<footer>
   	<div id="footercontent"> 
 			&copy; 2017 some students 
-			<a href="#" >Site Map</a>
+			<a href="../sitemap/sitemap.html" >Site Map</a>
     </div>
 	</footer>
 </body>
