--- a/G2/hema/hemainbc/hemainbc.html
+++ b/G2/hema/hemainbc/hemainbc.html
@@ -12,7 +12,7 @@
 		
 		<nav>
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li><a href="../../index.html">Home</a></li>
 				
 				<li class="dropdown">
 					<a href="#" class="button">HEMA </a>
