--- a/G2/sitemap/sitemap.html
+++ b/G2/sitemap/sitemap.html
@@ -13,7 +13,7 @@
 		
 		<nav>
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li><a href="../index.html">Home</a></li>
 				
 				<li class="dropdown">
 					<a href="#" class="button">HEMA </a>
