--- a/G2/aboutus/aboutus.html
+++ b/G2/aboutus/aboutus.html
@@ -66,7 +66,6 @@
 						<td class="team_d">Jaisreet Khaira</td> 
 						<td class="team_d"></td>
 					</tr>	
-					
 				</table>
 				<br>
 				<div id="comment">
@@ -88,7 +87,8 @@
 						
 							<tr>
 								<td>
-									<label for="comment">Leave us a comment!!</label>
+								<br>
+									<label for="comment">If you like the website; Leave us a comment!!</label>
 									<textarea rows="5" name="comment" value="comment"></textarea>
 									<input type="submit" value="Submit">
 								</td>
