--- a/G2/hema/hemastyles/hemastyles.html
+++ b/G2/hema/hemastyles/hemastyles.html
@@ -35,9 +35,7 @@
 	
 	<main>
 		<div id="wrapper">
-			<div id="imgplaceholder">
-				Imagine an exciting picture here!
-			</div>
+			<img id="bannerimg" src = "../../content/fenestraBanner.png" alt = "Two longsword fencers locked in a high bind." width="100%">
 			<div id="stylesList">
 				<ul>
 					<a><li>Longsword</li></a>
@@ -48,6 +46,7 @@
 				</ul>
 			</div>
 			<div id="styleDescriptions">
+				<h1>Style Name</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
 		</div>	
