added banner images to abouthema and hemainbc, added paragraphs to abouthema.

--- a/G2/hema/hemainbc/hemainbc.html
+++ b/G2/hema/hemainbc/hemainbc.html
@@ -36,10 +36,7 @@
 	
 	<main>
 		<div id="wrapper">
-			<div id="imgplaceholder">
-				Imagine an exciting picture here! <br>
-                HEMA IN BC PAGE
-			</div>
+			<img id="bannerimg" src = "../../content/fenestraBanner.png" alt = "Two longsword fencers locked in a high bind." width="100%">
 		</div>	
 	</main>
 	
