fixed border issue with styles list, added 1px bottom-border to banner img

--- a/G2/hema/hemastyles/hemastyles.html
+++ b/G2/hema/hemastyles/hemastyles.html
@@ -42,7 +42,7 @@
 					<a><li>Rapier</li></a>
 					<a><li>Sidesword</li></a>
 					<a><li>Wrestling</li></a>
-					<a><li>Other</li></a>
+					<a><li class="listEnd">Other</li></a>
 				</ul>
 			</div>
 			<div id="styleDescriptions">
