--- a/G2/index.html
+++ b/G2/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>HEMA website</title>
+	<link href="https://fonts.googleapis.com/css?family=Noticia+Text" rel="stylesheet"> 
 	<link rel="stylesheet" href="style/base.css">
 </head>
 <body>
