linked fonts for each page

--- a/G2/hema/hemastyles/hemastyles.html
+++ b/G2/hema/hemastyles/hemastyles.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>HEMA Styles</title>
+	<link href="https://fonts.googleapis.com/css?family=Cinzel|Titillium+Web" rel="stylesheet">
 	<link rel="stylesheet" href="../../style/base.css">
 </head>
 <body>
