--- a/G2/index.html
+++ b/G2/index.html
@@ -3,20 +3,20 @@
 <head>
 	<meta charset="utf-8">
 	<title>HEMA website</title>
-	<link href="https://fonts.googleapis.com/css?family=Noticia+Text" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Cinzel|Titillium+Web" rel="stylesheet">
 	<link rel="stylesheet" href="style/base.css">
 </head>
 <body>
 	<header>
-		<h1>HEMA</h1>
 		<img src="content/logo.png" alt="This is where the logo will go." />
+		<h1>HEMA</h1>
 		
 		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
 				
 				<li class="dropdown">
-					<a href="#" class="button">HEMA </a>
+					<a href="#" class="button">HEMA</a>
 					<div class="menu">
 						<a href="hema/abouthema/abouthema.html">About HEMA</a>
 						<a href="hema/hemastyles/hemastyles.html">HEMA Styles</a>
