--- a/G2/sitemap/sitemap.html
+++ b/G2/sitemap/sitemap.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Site Map</title>
+	<link href="https://fonts.googleapis.com/css?family=Cinzel|Titillium+Web" rel="stylesheet">
 	<link rel="stylesheet" href="../style/base.css">
 </head>
 <body>
