--- a/G2/index.html
+++ b/G2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>HEMA website</title>
+	<title>HEMA Vancouver</title>
 	<link rel="stylesheet" href="style/base.css">
 </head>
 <body>
