--- a/G2/index.html
+++ b/G2/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>HEMA Vancouver</title>
 	<title>HEMA website</title>
-	<link href="https://fonts.googleapis.com/css?family=Cinzel|Titillium+Web" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Cinzel|Dosis|Tinos|Titillium+Web" rel="stylesheet">
 	<link rel="stylesheet" href="style/base.css">
 </head>
 <body>
