--- a/G2/login/loginorsignup.html
+++ b/G2/login/loginorsignup.html
@@ -36,7 +36,7 @@
 		<div id="wrapper">
 			<div id="loginpanel">
 				<div class="loginform">
-					<form action="http://webdevfoundations.net/scripts/formdemo.asp">
+					<form onsubmit="checkForm()" method="post" action="http://webdevfoundations.net/scripts/formdemo.asp">
 						<table>
 							<tr>
 								<td class="logintitle" colspan="2">
@@ -70,7 +70,7 @@
 			</div>
 			<div id="registerpanel">
 				<div class="loginform">
-					<form action="http://webdevfoundations.net/scripts/formdemo.asp">
+					<form onsubmit="checkForm()" method="post" action="http://webdevfoundations.net/scripts/formdemo.asp">
 						<table>
 							<tr>
 								<td class="logintitle" colspan="2">
@@ -119,5 +119,15 @@
 			<a href="../sitemap/sitemap.html" >Site Map</a>
 		</div>
 	</footer>
+
+	<script>
+	function checkForm() {
+		console.log("checking form.");
+		if(document.getElementById("logemail").value == "") {
+			alert("please enter a valid email address.");
+			return false;
+		}
+	}
+	</script>
 </body>
 </html>
