--- a/G2/index.html
+++ b/G2/index.html
@@ -46,7 +46,8 @@
 				As a sport HEMA has been growing quickly since a boom in awareness of the study of what is often refferred to simply as 'swordfighting'. A combination of common access to the interenet allowing direct access to historical sources, and the emergence of HEMA clubs and schools, means that learning the 'forgotten' arts of everything from longsword duelling to umbrella self defence is more acccessible than ever.
 			</div>
 			<div id="indexFacts">
-
+				<h1>Quick facts</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
 		</div>	
 	</main>
