promise last one

--- a/G2/hema/hemastyles/hemastyles.html
+++ b/G2/hema/hemastyles/hemastyles.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<title>HEMA Styles</title>
-	<link href="https://fonts.googleapis.com/css?family=Cinzel|Titillium+Web" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 	<link rel="stylesheet" href="../../style/base.css">
 </head>
 <body>
@@ -35,14 +36,14 @@
 	
 	<main>
 		<div id="wrapper">
-			<img id="bannerimg" src = "../../content/fenestraBanner.png" alt = "Two longsword fencers locked in a high bind." width="100%">
+			<img id="bannerimg" src = "../../content/fenestraBanner.png" alt = "Two longsword fencers locked in a high bind.">
 			<div id="stylesList">
 				<ul>
-					<a><li onclick="setLongsword()">Longsword</li></a>
-					<a><li onclick="setRapier()">Rapier</li></a>
-					<a><li onclick="setSidesword()">Sidesword</li></a>
-					<a><li onclick="setWrestling()">Wrestling</li></a>
-					<a><li onclick="setOther()">Other</li></a>
+					<li onclick="setLongsword()">Longsword</li>
+					<li onclick="setRapier()">Rapier</li>
+					<li onclick="setSidesword()">Sidesword</li>
+					<li onclick="setWrestling()">Wrestling</li>
+					<li onclick="setOther()">Other</li>
 				</ul>
 			</div>
 			<div id="styleDescriptions">
