--- a/G2/index.html
+++ b/G2/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<title>HEMA</title>
-	<link href="https://fonts.googleapis.com/css?family=Cinzel|Dosis|Tinos|Titillium+Web" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 	<link rel="stylesheet" href="style/base.css">
 </head>
 <body>
@@ -35,7 +36,7 @@
 	
 	<main>
 		<div id="wrapper">
-			<img id="bannerimg" src = "content/fenestraBanner.png" alt = "Two longsword fencers locked in a high bind." width="100%">
+			<img id="bannerimg" src = "content/fenestraBanner.png" alt = "Two longsword fencers locked in a high bind.">
 			<div id="indexWhatIs">
 				<h1>What Is HEMA?</h1>
 				<p>HEMA stands for Historical European Martial Arts, and as the name implies it's a collection of combat arts with their origins rooted in historical Europe. Disciplines range from the earliest known medieval sword &amp; axe fighting manuals (circa 1400) to late Victorian era boxing and self-defense systems.</p>
