--- a/G2/hema/abouthema/abouthema.html
+++ b/G2/hema/abouthema/abouthema.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="zxx"> <!-- W3C would not validate if "en" was used, will need to be changed back later -->
 <head>
 	<meta charset="utf-8">
 	<title>About HEMA</title>
-	<link href="https://fonts.googleapis.com/css?family=Cinzel|Titillium+Web" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 	<link rel="stylesheet" href="../../style/base.css">
 </head>
 <body>
@@ -35,7 +36,7 @@
 	
 	<main>
 		<div id="wrapper">
-			<img id="bannerimg" src = "../../content/fenestraBanner.png" alt = "Two longsword fencers locked in a high bind." width="100%">
+			<img id="bannerimg" src = "../../content/fenestraBanner.png" alt = "Two longsword fencers locked in a high bind.">
 			<div id="aboutcontent">
 				
 				<h1>HEMA History</h1>
