--- a/G2/login/loginorsignup.html
+++ b/G2/login/loginorsignup.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<title>Login/Signup</title>
-	<link href="https://fonts.googleapis.com/css?family=Cinzel|Titillium+Web" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 	<link rel="stylesheet" href="../style/base.css">
 </head>
 <body>
