--- a/G2/sitemap/sitemap.html
+++ b/G2/sitemap/sitemap.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<title>Site Map</title>
-	<link href="https://fonts.googleapis.com/css?family=Cinzel|Titillium+Web" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 	<link rel="stylesheet" href="../style/base.css">
 </head>
 <body>
@@ -35,15 +36,13 @@
 	
 	<main>
 		<div id="wrapper">
-			<h1> Site Map</h1>
-			<ul type = "disc" id = "sitemap">
+			<h1>Site Map</h1>
+			<ul id = "sitemap">
 				<li> <a href = "../index.html">Home</a></li>
 				<li><a href = "#">HEMA</a></li>
-					<ul type = "circle">
-						<li> <a href = "../hema/abouthema/abouthema.html"> About HEMA </a></li>
-						<li> <a href = "../hema/hemastyles/hemastyles.html"> HEMA Styles </a></li>
-						<li> <a href = "../hema/hemainbc/hemainbc.html"> HEMA in BC </a></li>
-					</ul>
+				<li class = "indentedlist"> <a href = "../hema/abouthema/abouthema.html">About HEMA</a></li>
+				<li class = "indentedlist"> <a href = "../hema/hemastyles/hemastyles.html">HEMA Styles</a></li>
+				<li class = "indentedlist"> <a href = "../hema/hemainbc/hemainbc.html">HEMA in BC</a></li>
 				<li> <a href = "../aboutus/aboutus.html">About Us</a></li>
 				<li> <a href = "../login/loginorsignup.html">Login/Signup</a></li>
 			</ul>
