--- a/G2/login/loginorsignup.html
+++ b/G2/login/loginorsignup.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Login/Signup</title>
 	<link href="https://fonts.googleapis.com/css?family=Cinzel|Titillium+Web" rel="stylesheet">
-	<link rel="stylesheet" href="../style/base.css">
+	<link rel="stylesheet" href="../style/base.css">	
 </head>
 <body>
 	<header>
@@ -36,7 +36,7 @@
 		<div id="wrapper">
 			<div id="loginpanel">
 				<div class="loginform">
-					<form onsubmit="checkForm()" method="post" action="http://webdevfoundations.net/scripts/formdemo.asp">
+					<form onsubmit="return checkLogin()" method="post" action="http://webdevfoundations.net/scripts/formdemo.asp">
 						<table>
 							<tr>
 								<td class="logintitle" colspan="2">
@@ -70,7 +70,7 @@
 			</div>
 			<div id="registerpanel">
 				<div class="loginform">
-					<form onsubmit="checkForm()" method="post" action="http://webdevfoundations.net/scripts/formdemo.asp">
+					<form onsubmit="return checkRegistration()" method="post" action="http://webdevfoundations.net/scripts/formdemo.asp">
 						<table>
 							<tr>
 								<td class="logintitle" colspan="2">
@@ -121,13 +121,35 @@
 	</footer>
 
 	<script>
-	function checkForm() {
-		console.log("checking form.");
+	function checkLogin() {
 		if(document.getElementById("logemail").value == "") {
 			alert("please enter a valid email address.");
 			return false;
 		}
+		
+		if(document.getElemetById("logpassword").value == "") {
+			alert("please enter your password.");
+			return false;
+		}
+	}
+	
+	function checkRegistration() {
+		if(document.getElementById("regemail").value == "") {
+			alert("please enter a valid email address.");
+			return false;
+		}
+
+		if(document.getElementById("regemail").value != document.getElementById("confemail").value) {
+			alert("emails do not match.");
+			return false;
+		}
+		
+		if(document.getElemetById("regpassword").value == "") {
+			alert("please enter a password.");
+			return false;
+		}
 	}
 	</script>
+
 </body>
 </html>
