Matched abouthema.html style with hemastyles.html

--- a/G2/hema/hemastyles/hemastyles.html
+++ b/G2/hema/hemastyles/hemastyles.html
@@ -37,7 +37,7 @@
 	<main>
 		<div id="wrapper">
 			<img id="bannerimg" src = "../../content/fenestraBanner.png" alt = "Two longsword fencers locked in a high bind.">
-			<div id="stylesList">
+			<div class="sideList">
 				<ul>
 					<li onclick="setLongsword()">Longsword</li>
 					<li onclick="setRapier()">Rapier</li>
