--- a/G2/hema/abouthema/abouthema.html
+++ b/G2/hema/abouthema/abouthema.html
@@ -37,6 +37,14 @@
 	<main>
 		<div id="wrapper">
 			<img id="bannerimg" src = "../../content/fenestraBanner.png" alt = "Two longsword fencers locked in a high bind.">
+
+			<div class="sideList">
+				<ul>
+					<li onclick="setLongsword()">HEMA History</li>
+					<li onclick="setRapier()">Why do HEMA?</li>
+					<li onclick="setSidesword()">Getting Involved</li>
+				</ul>
+			</div>
 			<div id="aboutcontent">
 				
 				<h1>HEMA History</h1>
