added validation code to login page.

--- a/G2/login/loginorsignup.html
+++ b/G2/login/loginorsignup.html
@@ -36,7 +36,7 @@
 		<div id="wrapper">
 			<div id="loginpanel">
 				<div class="loginform">
-					<form onsubmit="return checkLogin()" method="post" action="http://webdevfoundations.net/scripts/formdemo.asp">
+					<form method="post" action="http://webdevfoundations.net/scripts/formdemo.asp">
 						<table>
 							<tr>
 								<td class="logintitle" colspan="2">
@@ -48,7 +48,7 @@
 									<label for="logemail">Email address:</label>
 								</td>
 								<td>
-									<input type="email" name="logemail" id="logemail">
+									<input type="email" name="logemail" id="logemail" required>
 								</td>
 							</tr>
 							<tr>
@@ -56,7 +56,7 @@
 									<label for="logpassword">Password:</label>
 								</td>
 								<td>
-									<input type="text" name="logpassword" id="logpassword">
+									<input type="password" name="logpassword" id="logpassword" required>
 								</td>
 							</tr>
 							<tr>
@@ -82,7 +82,7 @@
 									<label for="regemail">Email address:</label>
 								</td>
 								<td>
-									<input type="email" name="regemail" id="regemail">
+									<input type="email" name="regemail" id="regemail" required>
 								</td>
 							</tr>
 							<tr>
@@ -90,7 +90,7 @@
 									<label for="confemail">Confirm email:</label>
 								</td>
 								<td>
-									<input type="text" name="confemail" id="confemail">
+									<input type="text" name="confemail" id="confemail" required>
 								</td>
 							</tr>							
 							<tr>
@@ -98,7 +98,15 @@
 									<label for="regpassword">Password:</label>
 								</td>
 								<td>
-									<input type="text" name="regpassword" id="regpassword">
+									<input type="password" name="regpassword" id="regpassword" required>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<label for="confpassword">Confirm password:</label>
+								</td>
+								<td>
+									<input type="password" name="confpassword" id="confpassword" required>
 								</td>
 							</tr>
 							<tr>
@@ -120,36 +128,6 @@
 		</div>
 	</footer>
 
-	<script>
-	function checkLogin() {
-		if(document.getElementById("logemail").value == "") {
-			alert("please enter a valid email address.");
-			return false;
-		}
-		
-		if(document.getElemetById("logpassword").value == "") {
-			alert("please enter your password.");
-			return false;
-		}
-	}
-	
-	function checkRegistration() {
-		if(document.getElementById("regemail").value == "") {
-			alert("please enter a valid email address.");
-			return false;
-		}
-
-		if(document.getElementById("regemail").value != document.getElementById("confemail").value) {
-			alert("emails do not match.");
-			return false;
-		}
-		
-		if(document.getElemetById("regpassword").value == "") {
-			alert("please enter a password.");
-			return false;
-		}
-	}
-	</script>
-
+	<script type="text/javascript" src="validate.js"></script>
 </body>
 </html>
