added validation for comments on the about us page.

--- a/G2/login/loginorsignup.html
+++ b/G2/login/loginorsignup.html
@@ -128,6 +128,6 @@
 		</div>
 	</footer>
 
-	<script type="text/javascript" src="validate.js"></script>
+	<script type="text/javascript" src="loginorsignup-validate.js"></script>
 </body>
 </html>
