fixed about us email entry validation

--- a/G2/aboutus/aboutus.html
+++ b/G2/aboutus/aboutus.html
@@ -84,7 +84,7 @@
 							<tr>
 								<td>
 								<label for="email">Email:</label><br>
-								<input id="email" type="text" name="email" required>
+								<input id="email" type="email" name="email" required>
 								</td>
 							</tr>
 						
