styled hemainbc page. changed a font color in abouthema.

--- a/G2/hema/abouthema/abouthema.html
+++ b/G2/hema/abouthema/abouthema.html
@@ -40,9 +40,9 @@
 
 			<div class="sideList">
 				<ul>
-					<li onclick="setLongsword()">HEMA History</li>
-					<li onclick="setRapier()">Why do HEMA?</li>
-					<li onclick="setSidesword()">Getting Involved</li>
+					<a><li onclick="setLongsword()">HEMA History</li></a>
+					<a><li onclick="setRapier()">Why do HEMA?</li></a>
+					<a><li onclick="setSidesword()">Getting Involved</li></a>
 				</ul>
 			</div>
 			<div id="aboutcontent">
