--- a/G2/hema/hemainbc/hemainbc.html
+++ b/G2/hema/hemainbc/hemainbc.html
@@ -37,18 +37,19 @@
 	<main>
 		<div id="wrapper">
 			<img id="bannerimg" src = "../../content/fenestraBanner.png" alt = "Two longsword fencers locked in a high bind.">
-			<div>
+			<div id="hemainbcText">
 				<h1>Hema in BC</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<iframe id="maps-embed"
-					width="600"
-					height="450"
-					frameborder="0"
-					src="https://www.google.com/maps/embed/v1/search?key=AIzaSyD8ETPBw8qiG5hG89BIxOebzQGffU3u53A
-						&q=hema+vancouver
-						&zoom=11" 
-					allowfullscreen>
-				</iframe>
+			</div>
+			<iframe id="maps-embed"
+				width="600"
+				height="450"
+				frameborder="0"
+				src="https://www.google.com/maps/embed/v1/search?key=AIzaSyD8ETPBw8qiG5hG89BIxOebzQGffU3u53A
+					&q=hema+vancouver
+					&zoom=10" 
+				allowfullscreen>
+			</iframe>
 			</div>
 		</div>
 	</main>
