--- a/G2/hema/hemastyles/hemastyles.html
+++ b/G2/hema/hemastyles/hemastyles.html
@@ -41,11 +41,11 @@
 			<img id="bannerimg" src = "../../content/fenestraBanner.png" alt = "Two longsword fencers locked in a high bind.">
 			<div class="sideList">
 				<ul>
-					<li><a id="one" href="#">Longsword</a></li>
-					<li><a id="two" href="#">Rapier</a></li>
-					<li><a id="three" href="#">Sidesword</a></li>
-					<li><a id="four" href="#">Wrestling</a></li>
-					<li><a id="five" href="#">Other</a></li>
+					<a id="one" href="#"><li>Longsword</li></a>
+					<a id="two" href="#"><li>Rapier</li></a>
+					<a id="three" href="#"><li>Sidesword</li></a>
+					<a id="four" href="#"><li>Wrestling</li></a>
+					<a id="five" href="#"><li>Other</li></a>
 				</ul>
 			</div>
 			<div id="default" class="styleDescriptions">
