test change logo

--- a/G2/hema/hemastyles/hemastyles.html
+++ b/G2/hema/hemastyles/hemastyles.html
@@ -49,8 +49,9 @@
 				</ul>
 			</div>
 			<div id="default" class="styleDescriptions">
-				<h1>Style Name</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<h1>The Many Fighting Styles Covered By HEMA</h1>
+				<p>HEMA covers a wide array of martial combat systems and weapons. Even within each weapon type different schools teach fighting styles which are based on different historical masters and teachers.
+				<p>Click on the buttons in the left side navigation pane to see a little bit about some of the most popular weapons in modern HEMA.
 			</div>
 
 			<div id="longsword" class="hidden">
