added real content

--- a/G2/hema/hemastyles/hemastyles.html
+++ b/G2/hema/hemastyles/hemastyles.html
@@ -44,7 +44,8 @@
 					<a id="one" href="#"><li>Longsword</li></a>
 					<a id="two" href="#"><li>Rapier</li></a>
 					<a id="three" href="#"><li>Sidesword</li></a>
-					<a id="four" href="#"><li>Wrestling</li></a>
+					<a id="six" href="#"><li>Messer</li></a>
+					<a id="four" href="#"><li>Hand to Hand</li></a>
 					<a id="five" href="#"><li>Other</li></a>
 				</ul>
 			</div>
@@ -56,22 +57,36 @@
 
 			<div id="longsword" class="hidden">
 				<h1>Longsword</h1>
-				<p>This is some beautifully<br>formatted<br>text!</p>
+				<h4>Historically</h4>
+				<p>Longswords are weapons which were meant to be used in two hands and featured a simple cross guard and a straight, double edged blade. They are effective for both cutting and thrusting, and were commonly used both in and out of armour; on the battlefield as a soldiers secondary weapon, or in a duel as a weapon of honour.
+				<h4>Today</h4>
+				<p>Within the modern HEMA community Longsword is by far the most popular weapons to learn to fight with and it had the most/largest tournaments of all the fighting disciplines. Practitioners have the option of learning from two separate lineages, German (the more popular in tournaments) and Italian (which focused more on 'the duel'). Most German based schools focus on the teachings of the Jochim Meyer, while the Italian based schools typically teach from Fiore dei Liberi's treatise 'The Flower of Battle'.
 			</div>
 
             <div id="rapier" class="hidden">
-                <h1>Rapier</h1>
-                <p>Rapier<br>formatted<br>text!</p>
+              	<h1>Rapier</h1>
+				<h4>Historically</h4>
+				<p>Rapiers are one handed weapons inteneded primarily for thrusting. They have long narrow blades (usually even longer than a longsword), and more complex hand protection than most other swords. Although they were taken into battle as sidearms, they were truely duelling weapons which were speciallized for one on one combat.
+				<h4>Today</h4>
+				<p>Widely recognized as the weapon of the Three Musketeers and Zorro, the modern recreation of historical rapier draws in a large portion of the HEMA community. It also has the benefit of requiring minimal safety equipment (just gloves and a mask) and being relatively unlikely to injure seriously, which makes it popular with people who don't like the risks associated with heavier weapons such as longswords. Most schools of rapier teach based on the documents written by the Italian masters Ridolfo Capo Ferro, and Salvator Fabris.
             </div>
 
             <div id="sidesword" class="hidden">
-                <h1>Sidesword</h1>
-                <p>Sidesword<br>formatted<br>text!</p>
+              	<h1>Sideswprd</h1>
+				<h4>Historically</h4>
+				<p>Sidesword is the weapon which bridges the gap between the longsword and the rapier. It's one-handed and usually features a cross guard, finger ring guard, and knuckle protecion. They were intended to be easy to carry on ones belt in day to day life, hence the name sidesword ie. the sword carried at your side.
+				<h4>Today</h4>
+				<p>The Italian analogue to the German messer, sidesword is likely one of the least popular of the single handed sword disciplines in modern HEMA. It is most often taught based on the teachings of the Bolognese master Achille Marozzo, which he documented in his extensive book 'Opera Nova'.
             </div>
 
             <div id="wrestling" class="hidden">
-                <h1>Wrestling</h1>
-                <p>Wrestling<br>formatted<br>text!</p>
+                <h1>Hand to Hand</h1>
+				<p>Just like today, the most commonly encountered mode of combat throughout history has always been hand to hand combat. From Roman-Grecco wrestling to Victorian era pugilism and boxing, modern HEMA practioners have a wide array of systems to choose from. Most of the historical sword fighting manuals also contain sections on hand to hand combat, and techniques for forcing your opponent into it by wrestsling their swords away from them. Withtin the HEMA community unarmed combat is often reffered to as 'Ringen' (German) or 'Abrazare' (Italian) which both roughly transalte to 'Grapping'; and are featured quite often in some of the largest HEMA tournaments.
+            </div>
+
+            <div id="messer" class="hidden">
+                <h1>Hand to Hand</h1>
+				<p>Just like today, the most commonly encountered mode of combat throughout history has always been hand to hand combat. From Roman-Grecco wrestling to Victorian era pugilism and boxing, modern HEMA practioners have a wide array of systems to choose from. Most of the historical sword fighting manuals also contain sections on hand to hand combat, and techniques for forcing your opponent into it by wrestsling their swords away from them. Withtin the HEMA community unarmed combat is often reffered to as 'Ringen' (German) or 'Abrazare' (Italian) which both roughly transalte to 'Grapping'; and are featured quite often in some of the largest HEMA tournaments.
             </div>
 
             <div id="other" class="hidden">
