--- a/G2/login/loginorsignup.html
+++ b/G2/login/loginorsignup.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8">
 	<title>Login/Signup</title>
 	<link href="https://fonts.googleapis.com/css?family=Cinzel|Titillium+Web" rel="stylesheet">
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    
 	<link rel="stylesheet" href="../style/base.css">	
 </head>
 <body>
@@ -56,7 +58,7 @@
 									<label for="logpassword">Password:</label>
 								</td>
 								<td>
-									<input type="password" name="logpassword" id="logpassword" required>
+									<input type="password" name="logpassword" id="logpassword"  class="masterTooltip" title="Min 8 characters,at least 1 capital, 1 number, alphanumeric and !@#%^&*_ symbols are allowed." required>
 								</td>
 							</tr>
 							<tr>
@@ -98,7 +100,7 @@
 									<label for="regpassword">Password:</label>
 								</td>
 								<td>
-									<input type="password" name="regpassword" id="regpassword" required>
+									<input type="password" name="regpassword" id="regpassword" class="masterTooltip" title="Min 8 characters,at least 1 capital, 1 number, alphanumeric and !@#%^&*_ symbols are allowed." required>
 								</td>
 							</tr>
 							<tr>
@@ -106,7 +108,7 @@
 									<label for="confpassword">Confirm password:</label>
 								</td>
 								<td>
-									<input type="password" name="confpassword" id="confpassword" required>
+									<input type="password" name="confpassword" id="confpassword" class="masterTooltip" title="Min 8 characters,at least 1 capital, 1 number, alphanumeric and !@#%^&*_ symbols are allowed." required>
 								</td>
 							</tr>
 							<tr>
