finished hema styles page

--- a/G2/hema/hemastyles/hemastyles.html
+++ b/G2/hema/hemastyles/hemastyles.html
@@ -72,11 +72,11 @@
             </div>
 
             <div id="sidesword" class="hidden">
-              	<h1>Sideswprd</h1>
+              	<h1>Sidesword</h1>
 				<h4>Historically</h4>
-				<p>Sidesword is the weapon which bridges the gap between the longsword and the rapier. It's one-handed and usually features a cross guard, finger ring guard, and knuckle protecion. They were intended to be easy to carry on ones belt in day to day life, hence the name sidesword ie. the sword carried at your side.
+				<p>Sidesword is the weapon which bridges the gap between the longsword and the rapier. It's one-handed and usually features a cross guard, finger ring guard, and knuckle protection. They were intended to be easy to carry on ones belt in day to day life, hence the name sidesword ie. the sword carried at your side.
 				<h4>Today</h4>
-				<p>The Italian analogue to the German messer, sidesword is likely one of the least popular of the single handed sword disciplines in modern HEMA. It is most often taught based on the teachings of the Bolognese master Achille Marozzo, which he documented in his extensive book 'Opera Nova'.
+				<p>Sidesword is most often taught based on the teachings of the Bolognese master Achille Marozzo, which he documented in his extensive book 'Opera Nova'. They are often combined with an off hand implement such a small shield (buckler) or a parrying dagger. In modern HEMA sidesword is the Italian analogue to the German messer.
             </div>
 
             <div id="wrestling" class="hidden">
@@ -85,13 +85,27 @@
             </div>
 
             <div id="messer" class="hidden">
-                <h1>Hand to Hand</h1>
-				<p>Just like today, the most commonly encountered mode of combat throughout history has always been hand to hand combat. From Roman-Grecco wrestling to Victorian era pugilism and boxing, modern HEMA practioners have a wide array of systems to choose from. Most of the historical sword fighting manuals also contain sections on hand to hand combat, and techniques for forcing your opponent into it by wrestsling their swords away from them. Withtin the HEMA community unarmed combat is often reffered to as 'Ringen' (German) or 'Abrazare' (Italian) which both roughly transalte to 'Grapping'; and are featured quite often in some of the largest HEMA tournaments.
+                <h1>Langes Messer</h1>
+                <h4>Historically</h4>
+				<p>The langes messer is a one handed sword with a single edged blade and a simple cross guard and thumb protector. It features some odd design design choices compared to other weapons of its time due to it being an evolution of working knife. In fact 'langes messer' is German for 'long knife'. Because it was classified as a knife and not a sword, knife makers in late middle ages Germany were able to sell them to the lower classes and they became a popular weapon throught western europe.
+				<h4>Today</h4>
+				<p>The langes messer is common sight in modern HEMA schools which teach from German historical sources. Most schools teach from the documents written by Hans Talhofer as well as from a compilation of fight books known as the 'Codex Wallerstein'. In modern HEMA it is the German analogue to the Italian sidesword.
             </div>
 
             <div id="other" class="hidden">
                 <h1>Other</h1>
-                <p>Other<br>formatted<br>text!</p>
+                <p>Some of the other popular weapons in modern HEMA include:
+                <ul>
+                	<li>Great Sword - extremly long double edged straight sword with a simple cross guard and double length handle
+                	<li>Arming Sword - single hand double edged straight sword with a simple cross guard
+                	<li>Sabre - single hand single edged curved or straight sword with an enclosed hand guard or knuckle bow
+                	<li>Dussack - single hand single edged curved short sword with a knuckle bow
+                	<li>Polearm - a variety of weapons which are a long pole with some type of blade or hammer at the end
+                	<li>Quarter Staff - a long wooden pole 
+                	<li>Singlestick - short wooden sticks, sometimes with leather hand protection
+                	<li>Dagger - small knife intended primarily for thrusting as oppsed to cutting
+                	
+                </ul>
             </div>
 		</div>	
 	</main>
